[package]
name = "linked-markov"
description = "A minimal, thread-safe Markov chain implementation using reference-counted steps and weighted transitions"
version = "0.1.1"
edition = "2024"
authors = ["Nikita Kutselev <qnicks@gmail.com>"]
license = "CC0-1.0"
keywords = ["markov", "chain", "probability"]
readme = "README.md"
repository = "https://github.com/Gitopolis/linked-markov"

[dependencies]
rand = "0.9.2"
